--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@adonisjs/lucid": "^20.6.0",
     "@adonisjs/mail": "^9.2.1",
     "@vinejs/vine": "^2.0.0",
+    "adonisjs-filters": "^1.0.5",
     "luxon": "^3.4.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2"
